crates/apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__ensure_configuration_api_does_not_change-3.snap
---
source: crates/apollo-router/src/configuration/mod.rs
expression: config

---
server:
  listen: "1.2.3.4:5"
  cors: ~
subgraphs:
  example:
    routing_url: foo
opentelemetry:
  jaeger: ~

